--- a/src/components/popUp/InsertMoney.css
+++ b/src/components/popUp/InsertMoney.css
@@ -8,7 +8,8 @@
     flex-direction:column;
     align-items:center;
     justify-content:center;
-    margin-top:-10px;
+    margin-top:-px;
+    padding-bottom:3rem;
 }
 
 .wallet-container {
@@ -18,6 +19,7 @@
     display:flex;
     border-radius:20px;
     margin: 20px 5px 5px 0px;
+    box-shadow:0px 8px 18px 0px rgba(77,77,77,0.27);
 }
 
 .img {
@@ -28,11 +30,15 @@
 
 .money-section {
     display:flex;
-    width:70%;
+    width:75%;
+    padding-top:5px;
+    padding-bottom:5px;
     margin:auto;
     flex-direction:row;
     flex-wrap:wrap;
     display:flex;
+    background-color:rgb(255, 255, 255, 0.34);
+    border-radius:20px;
     justify-content:center;
     align-items:center;
 }
@@ -83,9 +89,10 @@
 }
 
 .submit {
-    margin-left:85%;
+    margin-left:60%;
     margin-bottom:10px;
-    width:75px;
+    margin-top:10px;
+    width:105px;
     height:55px;
     box-shadow:0px 8px 18px 0px rgba(77,77,77,0.27);
     border-radius:20px;
