--- a/src/components/popUp/PopUpFailed.css
+++ b/src/components/popUp/PopUpFailed.css
@@ -9,8 +9,8 @@
 }
 .modal-content {
     text-align:center;
-    height:260px;
-    padding:0px 0px 0px 0px;
+    height:250px;
+    background-color:#EED2CD;
 }
 
 .img-container {
@@ -26,12 +26,14 @@
 }
 
 .title {
-    margin-top:-30px
+    margin-top:-42px;
+    font-size:29px;
 }
 
 .text {
     margin:auto;
-    font-size:16px;
+    font-size:17px;
     width:80%;
-    margin-top:-14px;
+    font-weight:500;
+    margin-top:-17px;
 }
